# locals-only

./: .gitignore  README.md  codebook.toml  pyproject.toml
authoring-skills/create-tutorial/: SKILL.md
authoring-skills/professional-honesty/: SKILL.md
authoring-skills/review-tutorial/: SKILL.md
config/: authors.yaml  judges.yaml  settings.yaml
datasets/prompts/: con-hashing.yaml  con-semver.yaml  con-tcp-udp.yaml  howto-find-files.yaml  howto-python-csv.yaml  ref-chmod.yaml  ref-http-status.yaml  tut-git-first-repo.yaml  tut-python-json.yaml  tut-python-venv.yaml
datasets/reference/: con-hashing.yaml  con-semver.yaml  con-tcp-udp.yaml  howto-find-files.yaml  howto-python-csv.yaml  ref-chmod.yaml  ref-http-status.yaml  tut-git-first-repo.yaml  tut-python-json.yaml  tut-python-venv.yaml
fixtures/: bad.md  code-blocks.md  golden.md  regression.yaml
scripts/: doctor.sh
skills/audience-fit/: SKILL.md  rubric.yaml  schema.json
skills/code-quality/: SKILL.md  rubric.yaml
skills/completeness/: SKILL.md  rubric.yaml
skills/factuality/: SKILL.md  rubric.yaml  schema.json
skills/length-check/: SKILL.md  rubric.yaml  schema.json
skills/pairwise-compare/: SKILL.md  rubric.yaml  schema.json
skills/style-guide/: SKILL.md  rubric.yaml
src/eval_pipeline/: __init__.py  analyze.py  (+19 more)
styles/: .vale.ini
tests/: conftest.py  test_analyze.py  test_backends.py  test_db.py  test_discover.py  test_envinfo.py  test_generate.py  test_judge.py  test_lmstudio_integration.py  test_prompts.py  test_report_calibrate.py  test_skills.py  test_status.py  test_validate.py
(+4 files in other folders)
