[project]
name = "eval-pipeline"
version = "0.1.0"
description = "Local-model content-authoring eval: author models -> validators -> judges -> rankings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "click>=8.1",
    "jsonschema>=4.22",
    "choix>=0.3.5",
    "scipy>=1.13",
    "numpy>=1.26",
    "krippendorff>=0.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
eval = "eval_pipeline.cli:main"

[dependency-groups]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires a running LM Studio server (deselect with '-m \"not integration\"')",
]
